--- a/forge16/build.gradle
+++ b/forge16/build.gradle
@@ -14,11 +14,11 @@ buildscript {
     }
 }
 
-forgeVersion = "1.12.2"
+forgeVersion = "1.16.5"
 apply plugin: 'net.minecraftforge.gradle'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20180814-1.12'
+    mappings channel: 'official', version: '1.16.5'
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
@@ -31,22 +31,32 @@ repositories {
 
     maven { url 'https://jitpack.io' }
 
-    flatDir {
-        dirs '../Libraries/'
+    ivy {
+        setUrl('https://download.nodecdn.net/containers/reforged/server/release')
+        metadataSources {
+            artifact()
+        }
+        patternLayout {
+            artifact('[revision]/[artifact].[ext]')
+        }
     }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
-    compileOnly ('com.pixelmonmod.pixelmon:Pixelmon-1.12.2-8.3.3-server:1.0')
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'
+    implementation 'pixelmon:Pixelmon-1.16.5-9.0.7-server:9.0.7'
+
+    compileOnly 'com.github.EnvyWare.ForgePlaceholderAPI:api:0.0.1'
 
     shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    compileOnly 'com.github.Pixelmon-Development.ForgePlaceholderAPI:api:0.0.1'
-
-    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'commons', version: '1.2.3'
-    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'forge', version: '1.2.3'
-    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'reforged', version: '1.2.3'
+    shadow group: 'com.github.EnvyWare.API', name: 'commons', version: '3.1.3'
+    shadow (group: 'com.github.EnvyWare.API', name: 'forge16', version: '3.1.3') {
+        transitive = false;
+    }
+    shadow (group: 'com.github.EnvyWare.API', name: 'reforged16', version: '3.1.3') {
+        transitive = false;
+    }
 }
 
 shadowJar {
