--- a/forge16/build.gradle
+++ b/forge16/build.gradle
@@ -1,21 +1,9 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            name = 'forge'
-            url = 'https://files.minecraftforge.net/maven'
-        }
-        maven {
-            url = 'https://plugins.gradle.org/m2/'
-        }
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
-    }
+plugins {
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 forgeVersion = "1.16.5"
-apply plugin: 'net.minecraftforge.gradle'
 
 minecraft {
     mappings channel: 'official', version: '1.16.5'
@@ -46,24 +34,25 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'
-    implementation 'pixelmon:Pixelmon-1.16.5-9.1.3-server:9.1.3'
+    implementation 'pixelmon:Pixelmon-1.16.5-9.1.7-server:9.1.7'
 
     compileOnly 'com.github.EnvyWare.ForgePlaceholderAPI:api:0.0.1'
 
     shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    shadow group: 'com.envyful.api', name: 'commons', version: '4.2.9'
-    shadow (group: 'com.envyful.api', name: 'forge16', version: '4.2.9') {
+    shadow group: 'com.envyful.api', name: 'commons', version: '5.0.1'
+    shadow (group: 'com.envyful.api', name: 'forge16', version: '5.0.1') {
         transitive = false;
     }
-    shadow (group: 'com.envyful.api', name: 'reforged16', version: '4.2.9') {
+    shadow (group: 'com.envyful.api', name: 'reforged16', version: '5.0.1') {
         transitive = false;
     }
 }
 
 shadowJar {
+    finalizedBy('reobfJar')
     configurations = [project.configurations.shadow]
-    archiveName = rootProject.name + '-Forge.jar'
+    setArchiveBaseName(rootProject.name + '-Forge')
 
     relocate('org.spongepowered.configurate', 'com.envyful.legend.tracker.forge.shade.configurate')
     relocate('org.yaml.snakeyaml', 'com.envyful.legend.tracker.forge.shade.snakeyaml')
@@ -78,11 +67,5 @@ shadowJar {
     exclude "**/module-info.class"
 }
 
-reobf {
-    shadowJar {
-        classpath = sourceSets.main.compileClasspath
-    }
-}
-
-jar.finalizedBy('reobfJar')
+jar.finalizedBy('shadowJar')
 build.finalizedBy('versionedRelease')
