--- a/forge20/build.gradle
+++ b/forge20/build.gradle
@@ -38,25 +38,25 @@ shadowJar {
     setArchiveClassifier('')
     setArchiveBaseName("${rootProject.name}-Forge")
 
-    relocate('org.spongepowered.configurate', 'com.envyful.battle.tower.shade.configurate')
-    relocate('org.yaml.snakeyaml', 'com.envyful.battle.tower.shade.snakeyaml')
-    relocate('io.leangen.geantyref', 'com.envyful.battle.tower.shade.geantyref')
-    relocate('com.google.gson', 'com.envyful.battle.tower.shade.gson')
-    relocate('com.zaxxer', 'com.envyful.battle.tower.shade.hikari')
-    relocate('org.slf4j', 'com.envyful.battle.tower.shade.slf4j')
-    relocate('com.envyful.api', 'com.envyful.battle.tower.shade.envy.api')
-    relocate('org.bstats', 'com.envyful.battle.tower.shade.bstats')
-    relocate('com.google.common', 'com.envyful.battle.tower.shade.guava')
-    relocate('org.apache.logging', 'com.envyful.battle.tower.shade.log4j')
-    relocate('io.netty', 'com.envyful.battle.tower.shade.netty')
-    relocate('io.lettuce', 'com.envyful.battle.tower.shade.lettuce')
-    relocate('com.cronutils', 'com.envyful.battle.tower.shade.cronutils')
-    relocate('com.cronutils', 'com.envyful.battle.tower.shade.cronutils')
-    relocate('com.sun.el', 'com.envyful.battle.tower.shade.sun.el')
-    relocate('javax', 'com.envyful.battle.tower.shade.javax')
-    relocate('javax', 'com.envyful.battle.tower.shade.javax')
-    relocate('org.reactivestreams', 'com.envyful.battle.tower.shade.reactivestreams')
-    relocate('reactor', 'com.envyful.battle.tower.shade.reactor')
+    relocate('org.spongepowered.configurate', 'com.envyful.poke.tracker.forge.shade.configurate')
+    relocate('org.yaml.snakeyaml', 'com.envyful.poke.tracker.forge.shade.snakeyaml')
+    relocate('io.leangen.geantyref', 'com.envyful.poke.tracker.forge.shade.geantyref')
+    relocate('com.google.gson', 'com.envyful.poke.tracker.forge.shade.gson')
+    relocate('com.zaxxer', 'com.envyful.poke.tracker.forge.shade.hikari')
+    relocate('org.slf4j', 'com.envyful.poke.tracker.forge.shade.slf4j')
+    relocate('com.envyful.api', 'com.envyful.poke.tracker.forge.shade.envy.api')
+    relocate('org.bstats', 'com.envyful.poke.tracker.forge.shade.bstats')
+    relocate('com.google.common', 'com.envyful.poke.tracker.forge.shade.guava')
+    relocate('org.apache.logging', 'com.envyful.poke.tracker.forge.shade.log4j')
+    relocate('io.netty', 'com.envyful.poke.tracker.forge.shade.netty')
+    relocate('io.lettuce', 'com.envyful.poke.tracker.forge.shade.lettuce')
+    relocate('com.cronutils', 'com.envyful.poke.tracker.forge.shade.cronutils')
+    relocate('com.cronutils', 'com.envyful.poke.tracker.forge.shade.cronutils')
+    relocate('com.sun.el', 'com.envyful.poke.tracker.forge.shade.sun.el')
+    relocate('javax', 'com.envyful.poke.tracker.forge.shade.javax')
+    relocate('javax', 'com.envyful.poke.tracker.forge.shade.javax')
+    relocate('org.reactivestreams', 'com.envyful.poke.tracker.forge.shade.reactivestreams')
+    relocate('reactor', 'com.envyful.poke.tracker.forge.shade.reactor')
 
     exclude "**/module-info.class"
     exclude "**/*.properties"
