--- a/forge20/build.gradle
+++ b/forge20/build.gradle
@@ -5,10 +5,10 @@ plugins {
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-forgeVersion = "1.20.1"
+forgeVersion = "1.20.2"
 
 minecraft {
-    mappings channel: 'official', version: "1.20.1"
+    mappings channel: 'official', version: "1.20.2"
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
@@ -16,19 +16,19 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 repositories {}
 
 dependencies {
-    minecraft "net.minecraftforge:forge:1.20.1-47.1.44"
+    minecraft 'net.minecraftforge:forge:1.20.2-48.0.30'
 
-    implementation 'pixelmon:Pixelmon-1.20.1-9.2.1-server:9.2.1'
+    implementation 'pixelmon:Pixelmon-1.20.2-9.2.4-server:9.2.4'
 
-    implementation 'com.github.EnvyWare.ForgePlaceholderAPI:api:2.0.4'
+    implementation 'com.envyful.papi:api:2.0.5'
 
-    implementation group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
+    implementation group: 'org.spongepowered', name: 'configurate-yaml', version: '4.2.0-COMMENTS'
 
-    shadow group: 'com.envyful.api', name: 'commons', version: '5.0.3'
-    shadow (group: 'com.envyful.api', name: 'forge20', version: '5.0.3') {
+    shadow group: 'com.envyful.api', name: 'commons', version: '5.5.2'
+    shadow (group: 'com.envyful.api', name: 'forge20', version: '5.5.2') {
         transitive = false;
     }
-    shadow (group: 'com.envyful.api', name: 'reforged20', version: '5.0.3') {
+    shadow (group: 'com.envyful.api', name: 'reforged20', version: '5.5.2') {
         transitive = false;
     }
 }
@@ -41,23 +41,21 @@ shadowJar {
     relocate('org.spongepowered.configurate', 'com.envyful.poke.tracker.forge.shade.configurate')
     relocate('org.yaml.snakeyaml', 'com.envyful.poke.tracker.forge.shade.snakeyaml')
     relocate('io.leangen.geantyref', 'com.envyful.poke.tracker.forge.shade.geantyref')
-    relocate('com.google.gson', 'com.envyful.poke.tracker.forge.shade.gson')
     relocate('com.zaxxer', 'com.envyful.poke.tracker.forge.shade.hikari')
     relocate('org.slf4j', 'com.envyful.poke.tracker.forge.shade.slf4j')
     relocate('com.envyful.api', 'com.envyful.poke.tracker.forge.shade.envy.api')
     relocate('org.bstats', 'com.envyful.poke.tracker.forge.shade.bstats')
-    relocate('com.google.common', 'com.envyful.poke.tracker.forge.shade.guava')
     relocate('org.apache.logging', 'com.envyful.poke.tracker.forge.shade.log4j')
     relocate('io.netty', 'com.envyful.poke.tracker.forge.shade.netty')
     relocate('io.lettuce', 'com.envyful.poke.tracker.forge.shade.lettuce')
     relocate('com.cronutils', 'com.envyful.poke.tracker.forge.shade.cronutils')
     relocate('com.cronutils', 'com.envyful.poke.tracker.forge.shade.cronutils')
     relocate('com.sun.el', 'com.envyful.poke.tracker.forge.shade.sun.el')
-    relocate('javax', 'com.envyful.poke.tracker.forge.shade.javax')
-    relocate('javax', 'com.envyful.poke.tracker.forge.shade.javax')
     relocate('org.reactivestreams', 'com.envyful.poke.tracker.forge.shade.reactivestreams')
     relocate('reactor', 'com.envyful.poke.tracker.forge.shade.reactor')
 
+    exclude "com/google/**"
+    exclude "javax/**"
     exclude "**/module-info.class"
     exclude "**/*.properties"
     exclude "**/*.xml"
